Issue 51559: Revision for message when labkeyUpgradeLockFile already exists (#6009)